# bnn_bg

./: README.md  gen_ft_rank_plots.py  gen_summary_table.py  pyproject.toml  requirements.txt  run_drug_exps.py  run_ft_rank.py  run_gnn.py  run_pub_data_exp.py  seeds.txt
configs/: seeds.txt
core/: bnn_model.py  data_utils.py  gnn_models.py  models.py  optim.py  sgmcmc.py  sgmcmc_ext.py  spike_slab.py  spike_slab_bnn.py  spike_slab_ising.py
notebooks/: 0_langevin_monte_carlo.ipynb  1_gmm_gibbs.ipynb  2_variable_selection.ipynb  3_spike_slab_linear.ipynb  4_bnn_optim.ipynb  4b_bnn_optim.ipynb  5_ccle_gene_exp.ipynb
s3/: helper_functions.py  mcmc_functions.py
scripts/: params.yaml  run_models.py
utils/: data_utils.py  drug_exp_utils.py  hpo_util.py  losses.py  losses_ext.py  metrics.py  nn_util.py  pub_data_exp_utils.py  script_utils.py  train_utils.py  tree_utils.py
